--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@ body, h1, h2, h3, p, div {
   overflow-y: scroll;
   background-color: #130A2D;
 }
+li a{
+  text-decoration: none;
+}
+
 .footer{
   width: 100%;
   height: 30vh;
@@ -58,3 +62,67 @@ body, h1, h2, h3, p, div {
   background-size: cover;
   opacity: 0.9;
 }
+
+@media screen and (max-width: 1000px) {
+  .AdminBarLogo{
+    display: none;
+  
+  }
+  
+}
+
+/* Admin Cards */
+
+.wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+}
+.container1 {
+  width: 43vmin;
+  height: 18vmin;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 3em 0;
+  position: relative;
+  font-size: 16px;
+  border-radius: 0.5em;
+  background-color: #21242b;
+
+}
+
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    width: 85vw;
+  }
+  .container1 {
+    height: 26vmin;
+    width: 26vmin;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 90vw;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .container1 {
+    width: calc(50% - 40px);
+    height: 30vmin;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper {
+    gap: 15px;
+  }
+  .container1 {
+    width: 100%;
+    height: 25vmin;
+    font-size: 8px;
+  }
+}
+/* main slider */
