--- a/src/Assets/styles/MainSlider.scss
+++ b/src/Assets/styles/MainSlider.scss
@@ -41,7 +41,7 @@
       }
       .is-prev,
       .is-next{
-        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgb(255, 255, 255,0.5));
+        // background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgb(255, 255, 255,0.5));
         opacity: 0.2; 
         height: 50vh !important;
       }
