--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,9 @@ li a{
   }
 }
 @media screen and (max-width: 480px) {
+  .card-con{
+    width: 90vw !important;
+  }
   .wrapper {
     gap: 15px;
   }
@@ -186,7 +189,7 @@ li a{
  }
  .left-side {
   width: 100%;
-  background-color: rebeccapurple;
+
  }
  .signup-Bg{
   width: 100%;
@@ -282,6 +285,9 @@ li a{
    .sliderHeader{
     width: 95% !important;
    }
+   .card-con{
+    width: 90vw !important;
+  }
 
 
 }
@@ -290,5 +296,8 @@ li a{
     width: 100%;
     /* height: 50vh; */
    }
+   .card-con{
+    width: 90vw !important;
+  }
   
 }
