--- a/src/Assets/styles/Navbar.scss
+++ b/src/Assets/styles/Navbar.scss
@@ -25,6 +25,7 @@
     transition: 0.3s ease-in-out;
     
 }
+
 .Sub-Icon{
   width: 40px;
   height: 35px;
@@ -73,7 +74,7 @@
 
   margin-left: -140px;
   width: 200px;
-  height: 16.5vh;
+  height: auto;
   margin-top: 10px;
   background-color: white;
   position: absolute;
