--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -1,23 +1,24 @@
-.cardSlider{
-    width: 260.5px !important;
-    height: 140px !important;
-    background: rgb(9, 121, 116);
-background: linear-gradient(-60deg, rgb(104, 121, 9) 50%, rgb(255, 0, 157) 50%);
+.cardSlider {
+  width: 260.5px !important;
+  height: 140px !important;
+  // background: rgb(9, 121, 116);
+  // background: linear-gradient(
+  //   -60deg,
+  //   rgb(104, 121, 9) 50%,
+  //   rgb(255, 0, 157) 50%
+  // );
 }
-.card-Slider{
-
+.card-Slider {
   background: rgb(9, 121, 116);
-background: linear-gradient(-60deg, rgb(104, 121, 9) 50%, rgb(255, 0, 157) 50%);
 }
-.Cardslider{
-  .splide__arrow{
-    width: 30px!important;
-    height: 30px!important;
-    opacity: 1!important;
-    background-image: linear-gradient(to right, #00C4FF, #0074FF)
-  
+.Cardslider {
+  .splide__arrow {
+    width: 30px !important;
+    height: 30px !important;
+    opacity: 1 !important;
+    background-image: linear-gradient(to right, #00c4ff, #0074ff);
   }
-  .splide__arrow--prev svg ,
+  .splide__arrow--prev svg,
   .splide__arrow--next svg {
     fill: white !important;
     height: 12px !important;
@@ -27,10 +28,4 @@ background: linear-gradient(-60deg, rgb(104, 121, 9) 50%, rgb(255, 0, 157) 50%);
     margin-right: 15px !important;
     // display: none;
   }
- 
-  
-  
-  
-  }
-
-
+}
