--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -11,6 +11,11 @@
 .card-Slider {
   background: rgb(9, 121, 116);
 }
+.card-slider{
+  width: 280.5px !important;
+  height: 140px !important;
+
+}
 .Cardslider {
   .splide__arrow {
     width: 30px !important;
