--- a/src/Assets/styles/MainSlider.scss
+++ b/src/Assets/styles/MainSlider.scss
@@ -3,6 +3,7 @@
         position: relative;
         border-radius: 20px !important;
         height: 55vh !important;
+        margin-left: 6px;
         
       }
       .splide__slide::before,
@@ -37,7 +38,7 @@
         background-color: rgb(252, 252, 252)!important;
         opacity: 1!important;
         margin-left: 70px !important;
-        margin-right: 70px !important;
+        margin-right: 85px !important;
       }
       .is-prev,
       .is-next{
