--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,30 @@ li a{
 
  }
 
+ @media screen and (max-width: 2600px) {
+  .Cardslider{
+   width: 65% !important;
+  
+  }
+  .sliderHeader{
+    width: 65% !important;
+
+  }
+}
+@media screen and (max-width: 1980px) {
+  .Cardslider{
+   width: 73% !important;
+  
+  }
+  .sliderHeader{
+    width: 73% !important;
+
+  }
+  .mainSlider{
+    margin-top: 20px !important;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .AdminBarLogo{
     display: none;
@@ -133,6 +157,20 @@ li a{
     font-size: 14px;
   }
 }
+@media screen and (max-width: 380px) {
+  .banner-Buttons{
+    margin-left: 0;
+    /* margin-top: -10px; */
+    margin: auto;
+    position: relative;
+    top: -55% !important;
+   left: 30%;
+   display: flex;
+   flex-direction: column;
+   }
+}
+
+
 @media screen and (max-width: 480px) {
   .card-con{
     width: 90vw !important;
@@ -145,6 +183,15 @@ li a{
     height: 25vmin;
     font-size: 8px;
   
+  }
+  .banner-text{
+
+    left: 24% !important;
+    font-size: 24px !important;
+    width: 25% !important;
+    text-align: center !important;
+    margin-top: 20px ;
+    text-shadow: -1px 4px 2px rgba(0,0,0,0.6);
   }
   .sidebar-toggle {
     display: none;
@@ -242,11 +289,11 @@ li a{
  }
  .banner-Buttons{
   margin-left: 0;
-  margin-top: -10px;
+  margin-top: -20px !important;
   margin: auto;
   position: relative;
-  top: -80% !important;
- left: 0%;
+  top: -30% ;
+ left: 30%;
  display: flex;
  flex-direction: column;
  }
@@ -330,12 +377,12 @@ li a{
 
    }
    .banner-Buttons{
-    margin-left: 0;
+    margin-left: 210px ;
     margin-top: -10px;
     margin: auto;
-    width: 34vw;
+    width: 34vw !important;
     position: relative;
-    top: -40%;
+    top: -20%;
    }
    .mainSlider{
     height: 58vh !important;
@@ -358,6 +405,16 @@ li a{
     height: 50px;
     margin-left: 20px;
     margin-top: 10px !important;
+  }
+  .banner-text{
+
+    margin-left: 500px;
+    font-size: 38px ;
+    margin-left: 35px;
+    /* width: 25% !important; */
+    text-align: center;
+    margin-top: -9%;
+    text-shadow: -1px 4px 2px rgba(0,0,0,0.6);
   }
 
 
@@ -419,6 +476,19 @@ li a{
     width: 100%;
 
   }
+  .banner-text{
+
+   margin-left: 150px;
+    font-size: 38px ;
+    /* width: 25% !important; */
+    text-align: center;
+    margin-top: -9%;
+    text-shadow: -1px 4px 2px rgba(0,0,0,0.6);
+  }
+  .banner-Buttons{
+    width: 30vw;
+   margin-left: 175px
+   }
   .layer-icon{
     display: block;
     margin-top: 10px;
