--- a/src/Assets/styles/MainSlider.scss
+++ b/src/Assets/styles/MainSlider.scss
@@ -2,7 +2,7 @@
     .splide__slide {
         position: relative;
         border-radius: 20px !important;
-        height: 55vh !important;
+        height: 55vh;
         margin-left: 6px;
         
       }
