--- a/src/Assets/styles/Navbar.scss
+++ b/src/Assets/styles/Navbar.scss
@@ -7,10 +7,10 @@
 //     color: rgb(25, 5, 204);
 // } 
   
-  li:hover a::before,
-  li:active a::before {
-    background-color: rgb(73, 73, 250);
-  }
+  // li:hover a::before,
+  // li:active a::before {
+  //   background-color: rgb(73, 73, 250);
+  // }
 
 // .active {
 
