detailbanner backgroudn change

--- a/src/App.css
+++ b/src/App.css
@@ -497,6 +497,10 @@ li a{
 
     margin-bottom: 10px;
   }
+  .watch-img{
+    width: 100vw;
+    height: 50vh;
+  }
   .sidddee{
     height: 7vh;
     border: 1px solid;
