--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -8,6 +8,16 @@
   //   rgb(255, 0, 157) 50%
   // );
 }
+.cardSliderr {
+  width: 169px !important;
+  height: 110px !important;
+  // background: rgb(9, 121, 116);
+  // background: linear-gradient(
+  //   -60deg,
+  //   rgb(104, 121, 9) 50%,
+  //   rgb(255, 0, 157) 50%
+  // );
+}
 .card-Slider {
   background: rgb(9, 121, 116);
 }
@@ -90,23 +100,20 @@
 }
 @media screen and (max-width: 980px) {
 
-  .banner-Buttons{
-    width: 30vw !important;
-    }
+
     .mainSlider{
       height: 40vh !important;
     }
     .ended{
-      margin-left: 80px;
+      margin-left: 30px;
+    
     }
    
    
 }
 @media screen and (max-width: 790px) {
 
-  .banner-Buttons{
-    width: 32vw !important;
-    }
+ 
     .mainSlider{
       height: 45vh !important;
     }
@@ -116,7 +123,8 @@
 @media screen and (max-width: 420px) {
 
   .ended{
-    margin-left: 100px;
+    margin-left: 60px;
+    margin-top: -50px !important ;
   }
   .mainSlider{
     height: 53vh !important;
@@ -128,7 +136,8 @@
 @media screen and (max-width: 390px) {
 
   .ended{
-    margin-left: 100px;
+    margin-left: 60px;
+    margin-top: -50px !important ;
   }
   .mainSlider{
     height: 58vh !important;
