--- a/src/App.css
+++ b/src/App.css
@@ -112,8 +112,14 @@ li a{
     margin-top: 20px !important;
   }
   .ended{
-    margin-top: -55px;
+    margin-top: -45px;
+    margin-left: 30px;
   }
+  .tem-img-box{
+    padding-top: 0px;
+    padding-left: 8px;
+    padding-right: 8px;
+   }
 }
 
 @media screen and (max-width: 1000px) {
