--- a/src/Assets/styles/CardDetailss.scss
+++ b/src/Assets/styles/CardDetailss.scss
@@ -27,6 +27,10 @@
     transition: 1s ease-in-out;
     height: 35px;
   }
+  .team-names{
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
 
     .splide__arrow {
       width: 30px !important;
