--- a/src/App.css
+++ b/src/App.css
@@ -238,11 +238,10 @@ li a{
 
 }  .endedd{
   margin-left: 60px;
+  margin-top: -20px !important;
 }
 .new-footer-box{
   width: 100vw;
-}.google-btn{
-
 }
 .pay-cardds{
   width: 93vw !important;
