--- a/src/App.css
+++ b/src/App.css
@@ -481,7 +481,7 @@ li a{
     display: block;
   }
   .main-page {
-    flex-direction: column;
+    flex-direction: column !important;
    }
    .left-side {
     width: 100%;
@@ -489,11 +489,11 @@ li a{
    }
    .signup-Bg{
     width: 100%;
-    height: 50vh;
+    height: 40vh;
    }
    .signup{
     width: 100%;
-    height: 50vh;
+    height: 40vh;
    }
    .signup img{
     margin-top: 30px;
@@ -505,7 +505,6 @@ li a{
    .right-side {
     width: 100%;
     height:100vh;
-    border: 1px solid;
     background-color: white;
 
    }
@@ -631,6 +630,7 @@ li a{
     margin-top: 55px;
     
    }
+
    .post-Button{
     margin-top: 0px !important;
     width: 100px !important;
