--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -142,7 +142,7 @@
 
   .ended{
     margin-left: 60px;
-    margin-top: -50px !important ;
+    margin-top: -35px !important ;
   }
   .mainSlider{
     height: 53vh !important;
@@ -154,8 +154,8 @@
 @media screen and (max-width: 390px) {
 
   .ended{
-    margin-left: 45px;
-    margin-top: -40px !important ;
+    margin-left: 65px;
+    // margin-top: -40px !important ;
   }
   .mainSlider{
     height: 58vh !important;
